--- a/hpc_ai/ai_science_climate/Dockerfile
+++ b/hpc_ai/ai_science_climate/Dockerfile
@@ -1,23 +1,17 @@
-# Copyright (c) 2020 NVIDIA Corporation.  All rights reserved.
+# Copyright (c) 2023 NVIDIA Corporation.  All rights reserved.
 
 # To build the docker container, run: $ sudo docker build -t ai-science-climate:latest --network=host .
 # To run: $ sudo docker run --rm -it --gpus=all --network=host -p 8888:8888 ai-science-climate:latest
 # Finally, open http://127.0.0.1:8888/
 
 # Select Base Image 
-FROM nvcr.io/nvidia/tensorflow:21.05-tf2-py3
+FROM nvcr.io/nvidia/tensorflow:23.06-tf2-py3
 # Update the repo
 RUN apt-get update -y
 # Install required dependencies
 RUN apt-get install -y libsm6 libxext6 libxrender-dev git nvidia-modprobe
 # Install required python packages
-RUN pip3 install  opencv-python==4.1.2.30 pandas==1.3.5 seaborn sklearn matplotlib scikit-fmm tqdm h5py gdown
-RUN pip3 install --upgrade pip
-RUN apt-get update -y        
-RUN apt-get install -y git nvidia-modprobe
-RUN pip3 install jupyterlab
-# Install required python packages
-RUN pip3 install ipywidgets
+RUN pip3 install opencv-python gdown
 
 ##### TODO - From the Final Repo Changing this 
 
